--- a/2023_03_15/MVVM_Weather_Pulsar/MVVM_Weather_Pulsar/Resource/APIKey.plist
+++ b/2023_03_15/MVVM_Weather_Pulsar/MVVM_Weather_Pulsar/Resource/APIKey.plist
@@ -1,12 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
-<!--
-   APIKey.plist
-   MVVM_Weather_Pulsar
-
-   Created by Hamin Jeong on 2023/03/09.
-   Copyright (c) 2023 ___ORGANIZATIONNAME___. All rights reserved.
--->
 <plist version="1.0">
-<dict/>
+<dict>
+	<key>API_KEY</key>
+	<string>9e0d8828e477b466776cce8e54b03325</string>
+</dict>
 </plist>
